python/openswmm/engine/_common.pxd


cdef extern from "openswmm_nodes.h":
    # Identity
    cdef int         swmm_node_count(SWMM_Engine e)
    cdef int         swmm_node_index(SWMM_Engine e, const char* id)
    cdef const char* swmm_node_id(SWMM_Engine e, int idx)
    # Creation
    cdef int swmm_node_add(SWMM_Engine e, const char* id, int type)
    cdef int swmm_node_pop_last(SWMM_Engine e, const char* id)
    # Geometry setters
    cdef int swmm_node_set_invert_elev(SWMM_Engine e, int idx, double elev)
    cdef int swmm_node_set_max_depth(SWMM_Engine e, int idx, double depth)
    cdef int swmm_node_set_surcharge_depth(SWMM_Engine e, int idx, double depth)
    cdef int swmm_node_set_pond_area(SWMM_Engine e, int idx, double area)
    cdef int swmm_node_set_initial_depth(SWMM_Engine e, int idx, double depth)
    # Geometry getters
    cdef int swmm_node_get_type(SWMM_Engine e, int idx, int* type)
    cdef int swmm_node_get_invert_elev(SWMM_Engine e, int idx, double* elev)
    cdef int swmm_node_get_max_depth(SWMM_Engine e, int idx, double* depth)
    cdef int swmm_node_get_surcharge_depth(SWMM_Engine e, int idx, double* depth)
    cdef int swmm_node_get_ponded_area(SWMM_Engine e, int idx, double* area)
    cdef int swmm_node_get_initial_depth(SWMM_Engine e, int idx, double* depth)
    cdef int swmm_node_get_crown_elev(SWMM_Engine e, int idx, double* elev)
    cdef int swmm_node_get_full_volume(SWMM_Engine e, int idx, double* vol)
    cdef int swmm_node_get_losses(SWMM_Engine e, int idx, double* losses)
    cdef int swmm_node_get_outflow(SWMM_Engine e, int idx, double* outflow)
    cdef int swmm_node_get_degree(SWMM_Engine e, int idx, int* degree)
    # Hydraulic state
    cdef int swmm_node_get_depth(SWMM_Engine e, int idx, double* depth)
    cdef int swmm_node_set_depth(SWMM_Engine e, int idx, double depth)
    cdef int swmm_node_get_head(SWMM_Engine e, int idx, double* head)
    cdef int swmm_node_get_volume(SWMM_Engine e, int idx, double* volume)
    cdef int swmm_node_get_lateral_inflow(SWMM_Engine e, int idx, double* inflow)
    cdef int swmm_node_get_overflow(SWMM_Engine e, int idx, double* overflow)
    cdef int swmm_node_get_inflow(SWMM_Engine e, int idx, double* inflow)
    # Runtime forcing
    cdef int swmm_node_set_lateral_inflow(SWMM_Engine e, int idx, double flow)
    cdef int swmm_node_set_head_boundary(SWMM_Engine e, int idx, double head)
    # Quality
    cdef int swmm_node_get_quality(SWMM_Engine e, int node_idx, int pollutant_idx, double* conc)
    # Storage
    cdef int swmm_node_set_storage_curve(SWMM_Engine e, int idx, int curve_idx)
    cdef int swmm_node_get_storage_curve(SWMM_Engine e, int idx, int* curve_idx)
    cdef int swmm_node_set_storage_functional(SWMM_Engine e, int idx, double a, double b, double c)
    cdef int swmm_node_get_storage_functional(SWMM_Engine e, int idx, double* a, double* b, double* c)
    cdef int swmm_node_set_storage_seep_rate(SWMM_Engine e, int idx, double rate)
    cdef int swmm_node_get_storage_seep_rate(SWMM_Engine e, int idx, double* rate)
    cdef int swmm_node_set_exfil_params(SWMM_Engine e, int idx, double suction, double ksat, double imd)
    cdef int swmm_node_get_exfil_params(SWMM_Engine e, int idx, double* suction, double* ksat, double* imd)
    # Outfall
    cdef int swmm_node_set_outfall_type(SWMM_Engine e, int idx, int type)
    cdef int swmm_node_get_outfall_type(SWMM_Engine e, int idx, int* type)
    cdef int swmm_node_set_outfall_stage(SWMM_Engine e, int idx, double stage)
    cdef int swmm_node_set_outfall_tidal(SWMM_Engine e, int idx, int curve_idx)
    cdef int swmm_node_get_outfall_tidal(SWMM_Engine e, int idx, int* curve_idx)
    cdef int swmm_node_set_outfall_timeseries(SWMM_Engine e, int idx, int ts_idx)
    cdef int swmm_node_get_outfall_timeseries(SWMM_Engine e, int idx, int* ts_idx)
    cdef int swmm_node_get_outfall_param(SWMM_Engine e, int idx, double* param)
    cdef int swmm_node_set_outfall_flap_gate(SWMM_Engine e, int idx, int has_gate)
    cdef int swmm_node_get_outfall_flap_gate(SWMM_Engine e, int idx, int* has_gate)
    # Statistics
    cdef int swmm_node_get_stat_max_depth(SWMM_Engine e, int idx, double* val)
    cdef int swmm_node_get_stat_max_overflow(SWMM_Engine e, int idx, double* val)
    cdef int swmm_node_get_stat_vol_flooded(SWMM_Engine e, int idx, double* val)
    cdef int swmm_node_get_stat_time_flooded(SWMM_Engine e, int idx, double* val)
    # Bulk access
    # Bulk node accessors — pure C memory ops, safe to call without the GIL.
    cdef int swmm_node_get_depths_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_node_get_heads_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_node_get_inflows_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_node_get_overflows_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_node_set_depths_bulk(SWMM_Engine e, const double* buf, int count) nogil
    cdef int swmm_node_set_lat_inflows_bulk(SWMM_Engine e, const double* buf, int count) nogil
    cdef int swmm_node_get_quality_bulk(SWMM_Engine e, int pollutant_idx, double* buf, int count) nogil
    # Phase 3 bulk getters (volumes, outflows, losses, lateral_inflows, ids).
    cdef int swmm_node_get_volumes_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_node_get_outflows_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_node_get_losses_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_node_get_lateral_inflows_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_node_get_ids_bulk(SWMM_Engine e, char* buf, int stride, int count) nogil
    # Outfall route-to
    cdef int swmm_node_set_outfall_route_to(SWMM_Engine e, int idx, int subcatch_idx)
    cdef int swmm_node_get_outfall_route_to(SWMM_Engine e, int idx, int* subcatch_idx)
    # Depth from volume
    cdef int swmm_node_get_depth_from_volume(SWMM_Engine e, int idx, double volume, double* depth)
    # Quality mass flux
    cdef int swmm_node_set_quality_mass_flux(SWMM_Engine e, int node_idx, int pollutant_idx, double mass_rate)
    # Divider
    cdef int swmm_node_set_divider_type(SWMM_Engine e, int idx, int type)
    cdef int swmm_node_get_divider_type(SWMM_Engine e, int idx, int* type)
    # Rename
    cdef int swmm_node_rename(SWMM_Engine e, int idx, const char* newId)
    cdef int swmm_node_get_tag(SWMM_Engine e, int idx, char* buf, int buflen)
    cdef int swmm_node_set_tag(SWMM_Engine e, int idx, const char* tag)
